# VibeBeyond

./: .eslintrc.cjs  .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  pylintrc  readme.md  requirements.txt  tailwind.config.js
.github/: gtest.yml
.github/workflows/: black.yml  codecov.yml  eslint.yaml  eslint.yml  gtest.yml  isort.yml  lint.yml  pylint.yml  pytest.yml  spellcheck.yml  unitttest.yml  vitest.yml
backend/: app.py  requirements.txt
backend/tests/: test_sanity.py
docs/: 01_index.md  02_getting-started.md  03_how-to-use.md  04_code-design.md  05_configuration.md  06_features.md  07_troubleshooting.md  08_faq.md  09_contributing.md  10_testing.md  11_demos.md  _config.yml  architecture.md  config.yml  getting-started.md  index.md
docs/01_index/: index.md
docs/02_getting-started/: getting-started.md
docs/03_architecture/: 00_architecture.md  01_RNG.md  01_song-generation.md
docs/03_usage/: how-to-use.md
docs/04_code-structure/: code-structure.md
docs/04_faq/: faq.md
docs/05_configuration/: configuration.md
docs/06_features/: features.md
docs/07_troubleshooting/: troubleshooting.md
docs/08_faq/: faq.md
docs/09_contributing/: contributing.md
docs/10_testing/: testing.md
docs/11_demos/: demos.md
docs/development/: development.md  getting-started.md  testing.md  using-git-github.md  websites.md
docs/logic/: frontend.md  logic.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
src/: App.vue  CMakeLists.txt  app.py  constants.py  groovegen.m.cpp  index.css  style.css  vibebeyond.m.py  vibebeyond.py
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/: readme.md
src/components/: DateTime.vue  HowlerPlayer.vue
src/core/: CMakeLists.txt  groovegen_elements.cpp  groovegen_elements.h  groovegen_midi.cpp  groovegen_midi.h  groovegen_vst.cpp  groovegen_vst.h
src/py/: audio_manip.py  combine.py  constants.py  create_song.py  debug.py  elements.py  gen_loop.py  gen_midi.py  how_to_build_a_midi_song.py  info.py  log.py  loop_gen.py  midi_gen.py  queue.py  (+6 more)
tests/: test_sanity.py
(+47 files in other folders)
